# mcp-server-isaaclab

./: .gitignore  .mcp.json  README.md  claude_desktop_config.example.json  pyproject.toml
.claude/: settings.local.json
scripts/: deploy-remote-agent.sh  setup-brev-isaaclab.sh  setup-nebius-isaaclab.sh
src/mcp_server_isaaclab/: __init__.py  connection.py  server.py
src/mcp_server_isaaclab/remote/: agent.py
src/mcp_server_isaacsim/: server.py
src/mcp_server_isaacsim/remote/: agent.py
