[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-isaaclab"
version = "0.1.0"
description = "MCP server for NVIDIA Isaac Lab — RL training, environment management, and policy evaluation from Claude"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "asyncssh>=2.14.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
remote = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
mcp-server-isaaclab = "mcp_server_isaaclab.server:main"
isaaclab-remote-agent = "mcp_server_isaaclab.remote.agent:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_isaaclab"]
